[gd_scene load_steps=32 format=2]

[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/btn1prs.png" type="Texture" id=1]
[ext_resource path="res://custom_theme/panel.tres" type="StyleBox" id=2]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/sts #2.png" type="Texture" id=3]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/opt #2.png" type="Texture" id=4]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/wpn #2.png" type="Texture" id=5]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/sts #1.png" type="Texture" id=6]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/qst #2.png" type="Texture" id=7]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/qst #1.png" type="Texture" id=8]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/itm #2.png" type="Texture" id=9]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/itm #1.png" type="Texture" id=10]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/wpn #1.png" type="Texture" id=11]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/rcd #1.png" type="Texture" id=12]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/opt #1.png" type="Texture" id=13]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/rcd #2.png" type="Texture" id=14]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/btn1.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Main/Inventory/Master_Option.gd" type="Script" id=16]
[ext_resource path="res://Sprite/Main/UI/Inventory/Master_option/pattern.png" type="Texture" id=17]
[ext_resource path="res://Sprite/Main/UI/Inventory/equipment/eqpdesc.png" type="Texture" id=18]
[ext_resource path="res://Sprite/Main/UI/Inventory/mainbg #6.png" type="Texture" id=19]
[ext_resource path="res://Sprite/Main/UI/Inventory/equipment/titletext #1.png" type="Texture" id=20]
[ext_resource path="res://Sprite/Main/UI/Inventory/equipment/itemfld1.png" type="Texture" id=21]
[ext_resource path="res://Sprite/Main/UI/Inventory/equipment/eqp1.png" type="Texture" id=22]
[ext_resource path="res://Sprite/Main/UI/Inventory/equipment/eqp2.png" type="Texture" id=23]
[ext_resource path="res://Scenes/Main/Other/Custom_Slider.tscn" type="PackedScene" id=24]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 1334, 757 )

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="Theme" id=7]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 2 )
VScrollBar/styles/grabber_highlight = SubResource( 3 )
VScrollBar/styles/grabber_pressed = SubResource( 4 )
VScrollBar/styles/scroll = SubResource( 5 )
VScrollBar/styles/scroll_focus = SubResource( 6 )

[node name="Master_Option" type="Control"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 52.0
margin_top = 24.0
margin_right = -42.0
margin_bottom = -25.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pattern" type="TextureRect" parent="main_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 7.0
margin_right = -6.0
margin_bottom = -7.0
texture = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="main_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 10.0
margin_right = -13.0
margin_bottom = -1.0
rect_min_size = Vector2( 32, 0 )
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="main_panel/VBoxContainer"]
margin_right = 201.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 12 )
custom_constants/separation = 9

[node name="Items" type="TextureButton" parent="main_panel/VBoxContainer/HBoxContainer"]
margin_right = 96.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 15 )
expand = true

[node name="icon" type="TextureRect" parent="main_panel/VBoxContainer/HBoxContainer/Items"]
margin_left = 2.0
margin_top = 2.0
margin_right = 37.0
margin_bottom = 29.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="TextureRect" parent="main_panel/VBoxContainer/HBoxContainer/Items"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -5.5
margin_right = 15.0
margin_bottom = 5.5
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equipment" type="TextureButton" parent="main_panel/VBoxContainer/HBoxContainer"]
margin_left = 105.0
margin_right = 201.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 15 )
expand = true

[node name="icon" type="TextureRect" parent="main_panel/VBoxContainer/HBoxContainer/equipment"]
margin_left = 2.0
margin_top = 2.0
margin_right = 29.0
margin_bottom = 30.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="name" type="TextureRect" parent="main_panel/VBoxContainer/HBoxContainer/equipment"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -7.0
margin_right = 28.0
margin_bottom = 7.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer2" type="HBoxContainer" parent="main_panel/VBoxContainer"]
margin_top = 40.0
margin_right = 201.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 12 )
custom_constants/separation = 9

[node name="status" type="TextureButton" parent="main_panel/VBoxContainer/HBoxContainer2"]
margin_right = 96.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )
texture_normal = ExtResource( 1 )
expand = true

[node name="icon" type="TextureRect" parent="main_panel/VBoxContainer/HBoxContainer2/status"]
margin_left = 2.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 30.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="TextureRect" parent="main_panel/VBoxContainer/HBoxContainer2/status"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.0
margin_top = -4.5
margin_right = 13.0
margin_bottom = 4.5
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quest" type="TextureButton" parent="main_panel/VBoxContainer/HBoxContainer2"]
margin_left = 105.0
margin_right = 201.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )
texture_normal = ExtResource( 1 )
expand = true

[node name="icon" type="TextureRect" parent="main_panel/VBoxContainer/HBoxContainer2/quest"]
margin_left = 1.0
margin_top = 2.0
margin_right = 31.0
margin_bottom = 30.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="name" type="TextureRect" parent="main_panel/VBoxContainer/HBoxContainer2/quest"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.5
margin_top = -5.0
margin_right = 14.5
margin_bottom = 5.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer3" type="HBoxContainer" parent="main_panel/VBoxContainer"]
margin_top = 80.0
margin_right = 201.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 12 )
custom_constants/separation = 9

[node name="record" type="TextureButton" parent="main_panel/VBoxContainer/HBoxContainer3"]
margin_right = 96.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )
texture_normal = ExtResource( 1 )
expand = true

[node name="icon" type="TextureRect" parent="main_panel/VBoxContainer/HBoxContainer3/record"]
margin_left = 2.0
margin_top = 2.0
margin_right = 39.0
margin_bottom = 30.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="TextureRect" parent="main_panel/VBoxContainer/HBoxContainer3/record"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.5
margin_top = -4.5
margin_right = 14.5
margin_bottom = 4.5
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option" type="TextureButton" parent="main_panel/VBoxContainer/HBoxContainer3"]
margin_left = 105.0
margin_right = 201.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )
texture_normal = ExtResource( 1 )
expand = true

[node name="icon" type="TextureRect" parent="main_panel/VBoxContainer/HBoxContainer3/option"]
margin_left = 2.0
margin_top = 2.0
margin_right = 34.0
margin_bottom = 30.0
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="name" type="TextureRect" parent="main_panel/VBoxContainer/HBoxContainer3/option"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.5
margin_top = -5.5
margin_right = 16.5
margin_bottom = 5.5
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="option_tab" type="TabContainer" parent="main_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
tabs_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equipment" type="Tabs" parent="main_panel/option_tab"]
anchor_right = 1.0
anchor_bottom = 1.0
scrolling_enabled = false

[node name="title" type="TextureRect" parent="main_panel/option_tab/equipment"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -156.589
margin_top = -58.2897
margin_right = -73.5889
margin_bottom = -42.2897
texture = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="main_panel/option_tab/equipment"]
margin_left = 14.0
margin_top = 26.0
margin_right = 215.0
margin_bottom = 108.0
theme = SubResource( 7 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="main_panel/option_tab/equipment/ScrollContainer"]
margin_right = 199.0
margin_bottom = 192.0
rect_min_size = Vector2( 96, 98 )

[node name="HBoxContainer" type="HBoxContainer" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer"]
margin_right = 199.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
custom_constants/separation = 7

[node name="TextureButton" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 96.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="name" type="TextureRect" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer/TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -4.5
margin_right = 27.5
margin_bottom = 4.5
texture = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 103.0
margin_right = 199.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="TextureRect" type="TextureRect" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer/TextureButton2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.5
margin_top = -4.5
margin_right = 28.5
margin_bottom = 4.5
texture = ExtResource( 23 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer2" type="HBoxContainer" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 199.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
custom_constants/separation = 7

[node name="TextureButton" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 96.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 103.0
margin_right = 199.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="HBoxContainer3" type="HBoxContainer" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 199.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 24 )
custom_constants/separation = 7

[node name="TextureButton" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_right = 96.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 103.0
margin_right = 199.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="HBoxContainer4" type="HBoxContainer" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 199.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 24 )
custom_constants/separation = 7

[node name="TextureButton" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_right = 96.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 103.0
margin_right = 199.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="HBoxContainer5" type="HBoxContainer" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 199.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 24 )
custom_constants/separation = 7

[node name="TextureButton" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_right = 96.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_left = 103.0
margin_right = 199.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="HBoxContainer6" type="HBoxContainer" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 199.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 24 )
custom_constants/separation = 7

[node name="TextureButton" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer6"]
margin_right = 96.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer6"]
margin_left = 103.0
margin_right = 199.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="HBoxContainer7" type="HBoxContainer" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 199.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 24 )
custom_constants/separation = 7

[node name="TextureButton" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer7"]
margin_right = 96.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="main_panel/option_tab/equipment/ScrollContainer/VBoxContainer/HBoxContainer7"]
margin_left = 103.0
margin_right = 199.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 21 )
expand = true

[node name="description" type="TextureRect" parent="main_panel/option_tab/equipment"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -22.0
margin_right = -116.0
margin_bottom = -11.0
texture = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Custom_Slider" parent="." instance=ExtResource( 24 )]
position = Vector2( 265, 73 )
[connection signal="pressed" from="main_panel/VBoxContainer/HBoxContainer/equipment" to="." method="_on_equipment_pressed"]
